# sJAutoSport

./: .gitignore  AGENTS.md  ALL_FIXES_COMPLETE.md  BUGS_FIXED.md  BUG_FIXES_COMPLETE.md  BUG_FIX_PLAN.md  DEBUG_REMOVAL.md  ERROR_FIX.md  FIXES_2025_10_26.md  MOBILE_NAV_FIX.md  OPTIMIZATION_COMPLETE.md  ORDERS_MODULE.md  ORDERS_MULTI_USER_FIX.md  README.md  UI_OPTIMIZATION.md  UPDATE_SUMMARY.md  config.py  deploy.env  keepalive_analysis.md  keepalive_auto_recover.md  main.py  requirements.txt  schedule_order.py  setup_catnapqq.py  sjtu_sports.py  start_auto_booking.py  start_bot.py  start_integrated.py  start_napcat.sh  start_reverse_ws.sh
bot/: __init__.py  bot.py  env.example  hooks.py  nb_config.py  pyproject.toml  run.py  services.py
bot/plugins/: __init__.py  admin.py  auto_booking.py  book.py  job_manager.py  login.py  monitor.py  notification.py  query_slots.py
config/: users.json
data/: credentials.json
docs/: BOT_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  FRONTEND_OPTIMIZATION_SUMMARY.md  HOT_RELOAD_GUIDE.md  JOB_MANAGEMENT_GUIDE.md  LOGIN_RETRY_GUIDE.md  MONITOR_STRATEGY.md  MULTI_USER_OPTIMIZATION.md  QUICK_REFERENCE.md  README.md  README_DEPLOYMENT.md  bot_command_guide.md
frontend/: package-lock.json  package.json
scripts/: DEPLOY_README.md  deploy.sh  deploy_quick.sh  setup_env.sh
sja_booking/: __init__.py  api.py  auth.py  auto_booking.py  cli.py  database.py  discovery.py  job_manager.py  keep_alive.py  models.py  monitor.py  multi_user.py  notification.py  ocr.py  order.py  scheduler.py  service.py  user_manager.py
web_api/: __init__.py  (+2 more)
(+42 files in other folders)
